--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,135 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+p{
+  color: white;
+}
+
+.navLinks p:hover{
+  color: #64F4AC;
+  cursor: pointer;
+}
+
+.socialIcons:hover {
+  @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-[2] hover:text-[#64F4AC] duration-300
+}
+
+.navLinks p{
+  font-size: 13px;
+}
+
+.imgb {
+  height: 100%;
+  width: 100%;
+  object-fit:contain
+}
+
+.previewImg {
+  height: 100%;
+  width: 100%;
+  object-fit: cover
+}
+
+.gradient-overlay {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+}
+
+.theMagic {
+  --deg: 1;
+  --x: -50%;
+  --y: -50%;
+  --speed: 150ms;
+}
+
+.theMagic div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(var(--x, -50%), var(--y, -50%)) rotate(0deg);
+  font-size: 20vmin;
+  width: 3.2em;
+  height: 3.2em;
+  border-radius: 90% 95% 85% 105%;
+  background: #0f0;
+  mix-blend-mode: screen;
+  filter: hue-rotate(0deg);
+  animation: wobble calc(var(--speed) * var(--t)) linear infinite;
+  transform-origin: -var(--y) -var(--x);
+  box-shadow: 0 0 .5em .2em #000 inset, 0 0 .15em 0 #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &::after {
+    font-size: 1em;
+    /* content: '☻'; */
+    white-space: nowrap;
+  }
+  &:nth-child(1) {
+    --x: -53%;
+    --y: -53%;
+    --t: 37;
+  }
+  &:nth-child(2) {
+    --x: -47%;
+    --y: -52%;
+    --t: 58;
+  }
+  &:nth-child(3) {
+    --x: -45%;
+    --y: -50%;
+    --t: 46;
+  }
+  &:nth-child(4) {
+    --x: -53%;
+    --y: -45%;
+    --t: 72;
+  }
+  &:nth-child(5) {
+    --x: -55%;
+    --y: -45%;
+    --t: 62;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@keyframes wobble {
+  to {
+    filter: hue-rotate(360deg);
+    transform: translate(var(--x), var(--y)) rotate(360deg);
+  }
+}
+
+.centerDiv {
+  z-index: 10;
+  position: absolute;
+}
+
+.starMain {
+  perspective: 200px;
+}
+
+.star-wars-skew {
+  transform: rotateX(20deg) translateZ(0px);
+  transform-origin: 50% 100%;
+
+}
+
+@media screen and (max-width: 640px) {
+  .star-wars-skew {
+      transform:rotateX(20deg) translateZ(0px) translateY(0);
+      width: 400px;
+      /* top: 20%; */
+  }
+}
+
+.linksOnHover {
+  @apply transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300
 }
